<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:minHeight="100dp"
    android:background="#FFD600">

        <ImageView
            android:padding="12dp"
            android:id="@+id/imgArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/back_press"/>

        <ImageView
            android:id="@+id/imgCamera"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/imgAlbum"
            android:contentDescription="@string/camera"
            android:scaleType="centerInside"
            android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/imgAlbum"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/btnSaveNote"
            android:src="@drawable/image"
            android:contentDescription="@string/gallery"/>

        <Button
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:textColor="#FFD600"
            android:backgroundTint="@color/black"
            android:id="@+id/btnSaveNote"
            android:text="@string/save"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>